# Job-Applications-Tracker

./: .gitignore  README.md  extractor.py  main.py  pyproject.toml  storage.py  test_extractor.py  test_storage.py
src/: extractor.py  storage.py
tests/: test_extractor.py  test_storage.py
