[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-applications-tracker"
version = "0.1.0"
description = "A CLI tool to track job applications and extract description data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=2.8.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
jobtrack = "job-applications-tracker.main:main"
